--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vixid",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "author": {
     "name": "COD3V1L",
     "email": "codebase65@outlook.com",
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/michelnji/vixid.git"
   },
+  "packageManager": "npm@10.8.0",
   "main": "./dist/vixid.cjs",
   "module": "./dist/vixid.esm.js",
   "jsdelivr": "./dist/vixid.iife.js",
